<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/menu_home"
            android:title="@string/menu_home">
        </item>
        <item android:id="@+id/menu_informatik"
            android:title="@string/main_tv_titel_computer_science">
        </item>
        <item android:id="@+id/menu_business_informatik"
            android:title="@string/main_tv_titel_business_informatics">
        </item>
        <item android:id="@+id/menu_business_administration"
            android:title="@string/main_tv_titel_business_administration">
        </item>
        <item android:id="@+id/menu_physics"
            android:title="@string/main_tv_titel_physic">
        </item>
    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item android:id="@+id/menu_impressium"
            android:title="@string/impressium">
        </item>
        <item android:id="@+id/menu_version"
            android:title="@string/version">
        </item>
    </group>

</menu>