<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Physics.Physics">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/toolbar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:onClick="ClickPhysics1"
                android:background="@drawable/round_corner_bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physic1"
                    android:paddingTop="25dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jear"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Langage"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:onClick="ClickPhysics2"
                android:background="@drawable/round_corner_bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physic2"
                    android:paddingTop="25dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jear"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Langage"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:onClick="ClickPhysics3"
                android:background="@drawable/round_corner_bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physic3"
                    android:paddingTop="25dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jear"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Langage"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:onClick="ClickPhysics4"
                android:background="@drawable/round_corner_bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physic4"
                    android:paddingTop="25dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jear"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Langage"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:onClick="ClickPhysics5"
                android:background="@drawable/round_corner_bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physic5"
                    android:paddingTop="25dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jear"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Langage"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:onClick="ClickPhysics6"
                android:background="@drawable/round_corner_bottom">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/physic6"
                    android:paddingTop="25dp"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="30dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Autor"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jear"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Langage"
                        android:layout_weight="1"
                        android:textSize="15dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="#827A7A"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>